Fix letter-spacing for Firefox rendering

--- a/css/tidyverse.css
+++ b/css/tidyverse.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,300i,400,400i|Fira+Mono');
 
+body {
+  letter-spacing: normal;
+}
 
 .book .book-body .page-wrapper .page-inner section.normal p > img {
   margin: 0.5em auto 1.5em auto;
